--- a/Lucas_Silva_Pedro_Henrique.html
+++ b/Lucas_Silva_Pedro_Henrique.html
@@ -1,5 +1,5 @@
-<!---->
-<!---->
+<!--https://github.com/lc-santos/Grid_Lucas_Pedro-->
+<!--Lucas Silva dos Santos & Pedro Henrique Santos Silva-->
 
 <!DOCTYPE html>
 <html lang="pr-br">
