--- a/Lucas_Silva_Pedro_Henrique.html
+++ b/Lucas_Silva_Pedro_Henrique.html
@@ -2,7 +2,7 @@
 <!--Lucas Silva dos Santos & Pedro Henrique Santos Silva-->
 
 <!DOCTYPE html>
-<html lang="pr-br">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
